[gd_scene load_steps=24 format=2]

[ext_resource path="res://scenes/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/Reload-Timer-frames.png" type="Texture" id=3]
[ext_resource path="res://assets/sound-effects/ShotSound2.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sound-effects/ReloadSound.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 13, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 26, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 39, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 52, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 65, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 78, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 91, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 104, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 117, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 130, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 143, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 156, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 169, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 182, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 195, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 208, 0, 13, 13 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 17.0
} ]

[node name="Player" instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="ReloadTimer" parent="." index="3"]
wait_time = 1.0

[node name="ReloadTimerSprite" type="AnimatedSprite" parent="." index="4"]
visible = false
position = Vector2( -18, -16 )
frames = SubResource( 18 )

[node name="ShootSound" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource( 4 )

[node name="ReloadSound" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource( 5 )
[connection signal="animation_finished" from="ReloadTimerSprite" to="." method="_on_ReloadTimerSprite_animation_finished"]
